spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_same_named_methods_errors.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: X already has a method named test
  ┌─ testinput:6:5
  │
3 │     fn test() -> bool {true}
  │     ------------------------ Previous definition here
  ·
6 │     fn test() -> bool {false}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate method


